--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,16 @@
   text-align: center;
 }
 
+.main-chart {
+  display: flex;
+  width: 1400px;
+}
+
+
 .sales-chart {
-  margin: 30px;
+  margin: 30px 0;
   width: 1000px;
-  height: 600px;
+  height: 500px;
   padding: 50px;
   border-radius: 5px;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, .3); 
@@ -51,7 +57,7 @@
   color: #666;
   display: flex;
   margin-bottom: 30px;
-  width: 1000px;
+  width: 1400px;
   min-height: 250px;
   /* padding: 50px; */
   border-radius: 5px;
@@ -65,5 +71,5 @@
 }
 
 .doughnut{
-  margin-left: 15%;
+  margin-left: 25%;
 }
