--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
+:root {
+  --main-bg-color: white;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
 .main {
@@ -22,6 +30,7 @@
   width: 100%;
   height: 10%;
   color: #4f4e4e;
+  background-color: var(--main-bg-color);
   line-height: 100px;
   overflow: hidden;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, .3); 
@@ -45,6 +54,7 @@
 
 
 .sales-chart {
+  background-color: var(--main-bg-color);
   margin: 30px 0;
   width: 1000px;
   height: 500px;
@@ -54,6 +64,7 @@
 }
 
 .goal {
+  background-color: var(--main-bg-color);
   color: #666;
   display: flex;
   margin-bottom: 30px;
